--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -143,7 +143,7 @@ control:
   dupCheck: false
   requestValidation: false
   alertMode: true
-  alertEmail: "skkim@aimslas.com"
+  alertEmail: "jhlee@aimslas.com"
   errorEmail:
     - "skkim@aimslas.com"
 
